Created Throttle variable in WorldObjects, Modified KeyUp method, Bound Throttle in Dashboard.xaml

--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -41,8 +41,8 @@
                                 <TextBlock Grid.Row="1" Grid.Column="1" Text="Gear" TextAlignment="Center"/>
                             </Grid>
                             <Separator Height="15"></Separator>
-                            <TextBlock Text="{Binding }"/>
-                            <ProgressBar Value="50"></ProgressBar>
+                            <TextBlock Text="Throttle"/>
+                            <ProgressBar Value="{Binding Throttle}"></ProgressBar>
                             <TextBlock Text="Brake"/>
                             <ProgressBar Value="50"></ProgressBar>
                             <Separator Height="12"></Separator>
