Separated the Inceasing and decreasing function in Accelerate method
Separated the Inceasing and decreasing function in Deccelarate method

--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -44,7 +44,7 @@
                             <TextBlock Text="Throttle"/>
                             <ProgressBar Value="{Binding Throttle}"></ProgressBar>
                             <TextBlock Text="Brake"/>
-                            <ProgressBar Value="50"></ProgressBar>
+                            <ProgressBar Value="{Binding Brake}"></ProgressBar>
                             <Separator Height="12"></Separator>
                             <Image
                                 Width="90" Height="90"
