Changed how moovement works Changed how the steering-wheel gets its input for rotating

--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -52,7 +52,7 @@
                                 RenderTransformOrigin="{Binding RotationPoint, Converter={x:Static visualization:RenderTransformOriginTransformer.Instance}}">
 								<Image.RenderTransform>
 									<TransformGroup>
-										<RotateTransform Angle="{Binding Rotation}"/>
+										<RotateTransform Angle="{Binding SteeringWheelRotation}"/>
 									</TransformGroup>
 								</Image.RenderTransform>
 							</Image>
