--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -48,8 +48,7 @@
                             <Separator Height="12"></Separator>
 							<Image
                                 Width="90" Height="90"
-                                Source="resm:AutomatedCar.Assets.steering-wheel.png?assembly=AutomatedCar"
-                                RenderTransformOrigin="{Binding RotationPoint, Converter={x:Static visualization:RenderTransformOriginTransformer.Instance}}">
+                                Source="resm:AutomatedCar.Assets.steering-wheel.png?assembly=AutomatedCar" >
 								<Image.RenderTransform>
 									<TransformGroup>
 										<RotateTransform Angle="{Binding SteeringWheelRotation}"/>
