Packet,Interface,Sensor to ControlledCar (required for dashboard)

--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -30,7 +30,7 @@
                             <Grid ColumnDefinitions="2*,2*" RowDefinitions="50,15">
                                 <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding Revolution}" FontSize="40" TextAlignment="Center"/>
                                 <TextBlock Grid.Row="1" Grid.Column="0" TextAlignment="Center">rpm</TextBlock>
-                                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Velocity}" FontSize="40" TextAlignment="Center"/>
+                                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding VirtualFunctionBus.ControlledCarPacket.kmhCar}" FontSize="40" TextAlignment="Center"/>
                                 <TextBlock Grid.Row="1" Grid.Column="1" TextAlignment="Center">km/h</TextBlock>
                             </Grid>
                             <Separator Height="15"></Separator>
@@ -42,9 +42,9 @@
                             </Grid>
                             <Separator Height="15"></Separator>
                             <TextBlock Text="Throttle"/>
-                            <ProgressBar Value="{Binding Throttle}"></ProgressBar>
+                            <ProgressBar Value="{Binding VirutalFunctionBus.ControlledCarPacket.throttleCar}"></ProgressBar>
                             <TextBlock Text="Brake"/>
-                            <ProgressBar Value="{Binding Brake}"></ProgressBar>
+                            <ProgressBar Value="{Binding VirutalFunctionBus.ControlledCarPacket.brakeCar}"></ProgressBar>
                             <Separator Height="12"></Separator>
 							<Image
                                 Width="90" Height="90"
@@ -65,7 +65,7 @@
                                 <TextBlock Grid.Row="3" Grid.Column="0">Rotation:</TextBlock>
                                 <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Rotation}"/>
                                 <TextBlock Grid.Row="4" Grid.Column="0">Distance X:</TextBlock>
-                                <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding VirtualFunctionBus.DummyPacket.DistanceX}"/>
+                                <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding ControlledCar.VirtualFunctionBus.DummyPacket.DistanceX}"/>
                                 <TextBlock Grid.Row="5" Grid.Column="0">Distance Y:</TextBlock>
                                 <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding VirtualFunctionBus.DummyPacket.DistanceY}"/>
                             </Grid>
