--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -66,8 +66,9 @@
                                 <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Rotation}"/>
                                 <TextBlock Grid.Row="4" Grid.Column="0">Distance X:</TextBlock>
                                 <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Car.ControlledCar.VirtualFunctionBus.DummyPacket.DistanceX}"/>
-                                <TextBlock Grid.Row="5" Grid.Column="0">Distance Y:</TextBlock>
-                                <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.DummyPacket.DistanceY}"/>
+
+								<TextBlock Grid.Row="6" Grid.Column="0">Adaptive Tempomat:</TextBlock>
+								<TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.TempomatPacket.IsItOn}"/>
                             </Grid>
                         </StackPanel>
                     </DataTemplate>
