--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -55,7 +55,7 @@
 									</TransformGroup>
 								</Image.RenderTransform>
 							</Image>
-                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto, Auto,Auto">
                                 <TextBlock Grid.Row="0" Grid.Column="0">X:</TextBlock>
                                 <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding X}"/>
                                 <TextBlock Grid.Row="1" Grid.Column="0">Y:</TextBlock>
@@ -66,9 +66,10 @@
                                 <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Rotation}"/>
                                 <TextBlock Grid.Row="4" Grid.Column="0">Distance X:</TextBlock>
                                 <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Car.ControlledCar.VirtualFunctionBus.DummyPacket.DistanceX}"/>
-
-								<TextBlock Grid.Row="6" Grid.Column="0">Adaptive Tempomat:</TextBlock>
-								<TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.TempomatPacket.IsItOn}"/>
+								<TextBlock Grid.Row="5" Grid.Column="0">Adaptive Tempomat:</TextBlock>
+								<TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.TempomatPacket.IsItOn}"/>
+								<TextBlock Grid.Row="6" Grid.Column="0">Wanted Speed:</TextBlock>
+								<TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.TempomatPacket.WantedSpeed}"/>
                             </Grid>
                         </StackPanel>
                     </DataTemplate>
