emergency break logic done, fixxing needed

--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -55,7 +55,7 @@
 									</TransformGroup>
 								</Image.RenderTransform>
 							</Image>
-                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
+                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
                                 <TextBlock Grid.Row="0" Grid.Column="0">X:</TextBlock>
                                 <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding X}"/>
                                 <TextBlock Grid.Row="1" Grid.Column="0">Y:</TextBlock>
@@ -70,6 +70,10 @@
                                 <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.DummyPacket.DistanceY}"/>
 								<TextBlock Grid.Row="6" Grid.Column="0">Emergency break:</TextBlock>
 								<TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.ControlledCarPacket.EmergencyBreakOnOff}"/>
+							    <TextBlock Grid.Row="7" Grid.Column="0">Action required from driver:</TextBlock>
+								<TextBlock Grid.Row="7" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.ControlledCarPacket.ActionRequiredFromDriver}"/>
+					            <TextBlock Grid.Row="8" Grid.Column="0">Distance of the object in front of the car:</TextBlock>
+								<TextBlock Grid.Row="8" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.ControlledCarPacket.ObjectInFrontOfDistance}"/>
                             </Grid>
                         </StackPanel>
                     </DataTemplate>
